style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* @media only screen and (max-width: 768px) { */
body {
  max-width: 100vw;
}

/* .nav-container {
  overflow: hidden;
  position: fixed;
  top: 0;
  width: 100%;
} */

.desktop-nav a {
  color: #28352f;
  text-decoration: none;
  margin: 0 10px;
  padding: 10px 10px;
  position: relative;
  z-index: 0;
  cursor: pointer;
}

.nav-bar {
  display: flex;
  justify-content: space-between;
  color: #28352f;
  color: #fff;
  padding: 15px 24px 0 24px;
}

.nav-bar h1 {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 20px;
  line-height: 28px;
  text-decoration: none;
}

.nav-bar a {
  text-decoration: none;
  color: #28352f;
}

section {
  display: flex;
  flex-direction: column;
  max-width: 100vw;
  text-align: center;
  align-items: center;
  margin-left: 8px;
}

.headline-intro {
  background-image: url(./images/mobile-background.png);
  background-repeat: no-repeat;
  background-size: cover;
}

.desktop-nav ul {
  display: none;
}

.header-content .intro {
  font-family: 'Inter', sans-serif;
  width: 327px;
  height: 192px;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  text-align: center;
  color: #172b4d;
  padding: 24px;
  margin: 32px;
}

.header-content .hello-span {
  color: green;
}

.header-content .bio {
  font-family: 'Inter', sans-serif;
  width: 327px;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  text-align: center;
  color: #172b4d;
  padding: 20px 0;
  margin: 28px;
}

.social-media-icon ul {
  width: 170.17px;
  height: 20px;
  text-align: center;
  display: flex;
  justify-content: space-between;
  margin: 0 auto;
  margin-bottom: 20px;
}

.social-media-icon li {
  text-decoration: none;
  list-style: none;
}

.social-media-icon img {
  padding: 5px;
  font-size: 70px;
}

.card-enabler {
  margin: 10px 0;
  text-align: center;
}

.recent-work {
  width: 327px;
  height: 97px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 30px;
  line-height: 52px;
  align-items: center;
  text-align: center;
  color: #172b4d;
  margin: 20px auto;
  margin-bottom: 50px;
}

.indicator {
  margin: 20px auto;
  display: flex;
  align-items: center;
  text-align: center;
}

.card-containers {
  width: 80%;
}

.card-container {
  display: flex;
  align-items: flex-end;
  height: 474px;
  width: 90%;
  border-radius: 8px;
  background-color: #d0d9d4;
  border: 1px solid grey;
  margin: 20px 0;
}

.card {
  bottom: 0;
  height: 235px;
  width: 100%;
  border-radius: 8px;
  padding: 10px;
  border-color: #3a4a42;
  background-color: #fff;
}

.card-content {
  margin: 10px 0;
}

.tags {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0;
  width: 100%;
}

.card h4 {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 32px;
  display: flex;
  align-items: center;
  text-align: center;
  color: #3a4a42;
}

.tags span {
  margin-top: 10px;
  margin-left: 2px;
  height: 36px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;

  /* letter-spacing: 0.03em; */
  color: #3a4a42;
  background-color: #ebf0ee;
  padding: 8px 10px;
  border-radius: 4px;
}

.card-container:nth-child(5),
.card-container:nth-child(6) {
  display: none;
}

.btn {
  background-color: #36b37f;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px;
  width: 122px;
  height: 48px;
  border-radius: 4px;
  border-color: #36b37f;
  margin: 20px auto;
}

.btn a {
  color: #fff;
  text-decoration: none;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
}

.about-me-bg {
  position: relative;
  height: 333px;
  width: 100vw;
}

.about-me-bg .about-img-1 {
  display: block;
  position: absolute;
  right: -220px;
  top: -230px;
  transform: scale(0.2, 0.2);
}

.about-me-bg .about-img-2 {
  display: block;
  position: absolute;
  left: -215px;
  bottom: -80px;
  transform: scale(0.2, 0.2);
}

.about-me {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 355px;
  height: 240px;
  margin: 0 auto;
}

.about-me h2 {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  text-align: center;
  color: #172b4d;
}

.about-me p {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 32px;
  text-align: center;
  color: #42526e;
}

.about-me .resume-btn {
  width: 159px;
  height: 48px;
  text-align: center;
  background: #36b37f;
  border-radius: 4px;
  border-color: #36b37f;
  margin: 0 auto;
  padding: 15px;
  margin-top: 20px;
}

.about-me a {
  text-decoration: none;
  text-align: center;
  color: #fff;
  font-family: 'Inter', sans-serif;
  font-weight: 500;
}

.about-me-skils {
  max-width: 95vw;
}

.languages {
  background-color: #ebf0ee;
  border: 1px solid #c1c7d0;
  border-radius: 8px;
  width: 90%;
  height: 355px;
  padding: 50px 8px;
  margin: 20px 0;
  margin-left: 7px;
}

.languages h1,
.frameworks h1,
.skills h1 {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 1.5;
  text-align: center;
  color: #344563;
}

.lang-tags,
.frameworks-tags,
.skills-tags {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0;
  width: 100%;
  margin: 24px 0;
}

.lang-tags span {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 1.5;
  letter-spacing: 0.03em;
  color: #36b37e;
  background-color: #fff;
  padding: 8px 10px;
  border-radius: 4px;
  margin: 0 10px 5px 0;
}
/* ... */

